--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ table {
     position: relative;
     top: -55px;
     left: 115px;
-
+    
 }
 
 .posts {
@@ -163,8 +163,8 @@ table {
     background-color:#FFFFFF;
     width: 378px;
     padding: 20px;
-    margin-bottom: 32px;
     border-radius: 4px;
+    margin-bottom: 32px;
 }
 
 .posts .posts__box-card .posts__card .border-line {
@@ -278,3 +278,121 @@ table {
 .footer {
 	margin-top: 104px;
 }
+
+.header .header__nav .header__burger .header__border {
+    border-bottom: 1px solid #000000;
+    width: 30px;
+    margin-top: 7px;
+    display: none;
+}
+
+.header .header__nav .header__burger {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    margin: 19px 18px 0px 0px;
+    cursor: pointer;
+}
+
+.close:before, .close:after {
+    position: absolute;
+    right: 15px;
+    top: 19px;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: #333;
+  
+  }
+  .close:before {
+    transform: rotate(45deg);
+  }
+  .close:after {
+    transform: rotate(-45deg);
+  }
+
+.close .header__border {
+    display: none!important;
+}
+
+@media (max-width: 420px) {
+    .header .header__nav .header__menu {
+        display: none;
+    
+    }
+    .header .header__nav .header__burger .header__border {
+        display: block;
+        
+    }
+    .container {
+        width: 375px;
+        
+    }
+    .title-info .container {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .title-info .title-info__img-man {
+        width: 170.86px;
+        height: 170.86px;
+        position: static;
+        margin-top: 33px;
+    }
+    .title-info .title-info__box {
+        margin-top:35px;
+        text-align: center;
+
+    }
+    .title-info .title-info__box .title-info__title {
+        font-family: Heebo;
+        font-weight: bold;
+        font-size: 33px;
+        color: #21243D;
+        line-height: 40px;
+        width: 312px;
+        margin: 0 auto;
+    }
+    .title-info .title-info__box .title-info__subtitile {
+        width: 328px;
+        margin: 0 auto;
+
+    
+    }
+    .posts .posts__box .posts__link {
+        display: none;
+    }
+    .posts .posts__box-card {
+        display: flex;
+        flex-direction: column;
+
+    }
+    .posts .posts__box-card .posts__card {
+        width: 315px;
+        padding: 12px 20px 22px 20px;
+        margin: 0 auto;
+        margin-bottom: 17px;
+
+    }
+    .posts .posts__box .posts__title {
+        margin: 0 auto  ;
+    }
+    .title-info .title-info__box {
+        width: 100%;
+    }
+    .posts .posts__box-card .posts__text-card {
+        width: 100%;
+    }
+    .posts .posts__box-card .posts__card .posts__theme-card {
+        font-size: 22px;
+        padding-bottom: 12px;
+    }
+    .posts {
+        padding-bottom: 21px;
+    }
+    
+}
+ 
+
+
+
