--- a/css/style_blog.css
+++ b/css/style_blog.css
@@ -159,3 +159,76 @@ table {
 .footer {
 	margin-top: 104px;
 }
+
+.header .header__nav .header__burger .header__border {
+    border-bottom: 1px solid #000000;
+    width: 30px;
+    margin-top: 7px;
+    display: none;
+}
+
+.header .header__nav .header__burger {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    margin: 19px 18px 0px 0px;
+    cursor: pointer;
+}
+
+@media (max-width: 420px) {
+	.container {
+        width: 375px;    
+    }
+	.header .header__nav .header__menu {
+        display: none;
+    
+    }
+	.title-blog .title-blog__title {
+		font-size: 30px;
+		margin: 36px 0px 0px 30px;
+
+	}
+	.title-blog .title-blog__blog .title-blog__name {
+		font-size: 26px;
+	}
+	.title-blog .title-blog__blog .title-blog__sub-name {
+		font-size: 16px;
+	}
+	.title-blog .title-blog__blog .title-blog__sub-theme {
+		font-size: 16px;
+	}
+	.title-blog .title-blog__blog {
+		width: 314px;
+		margin: 0 auto;
+		padding-top: 18px;
+
+	}
+	.header .header__nav .header__menu {
+        display: none;
+    
+    }
+    .header .header__nav .header__burger .header__border {
+        display: block;
+        
+    }
+	.footer {
+        margin-top: 104px;
+    }
+    .footer .footer__icons .footer__link:nth-child(4) {
+        margin-right: 0;
+    }
+    .footer .footer__copyright {
+        padding-right: 0px; 
+    }
+    .works .works__title {
+        font-size: 18px;
+        text-align: center;
+        padding-bottom: 0px;
+    }
+    .works .works__box .works__card .works__wrapper .works__years-type .works__years {
+        margin-left: 0px;
+    }
+	.title-blog .title-blog__blog .border-line {
+		margin: 0 15px -5px;
+	}
+}
